Update 109.2 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.2 Persistent network configuration/109.2 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.2 Persistent network configuration/109.2 Lesson 2.md
@@ -4,8 +4,8 @@
 |:----------------|:--------------------------------------------|
 | **Версия:**     | 5.0                                         |
 | **Тема:**       | 109 Основы сетевых технологий               |                           
-| **Цель:**       | 109.2 Постоянная сетевая конфигурация            |
-| **Урок:**       | 1 из 2                                      |
+| **Цель:**       | 109.2 Постоянная сетевая конфигурация       |
+| **Урок:**       | 2 из 2                                      |
 
 
 ## Введение
@@ -77,3 +77,189 @@ IN-USE  BSSID              SSID        MODE   CHAN  RATE        SIGNAL  BARS  SE
 ```
 
 Большинство пользователей, вероятно, будут использовать имя в столбце `SSID` для определения интересующей сети. Например, команда `nmcli` может снова подключиться к сети с именем Hypnotoad, используя объект устройства:
+
+```console
+$ nmcli device wifi connect Hypnotoad
+```
+
+Если команда выполняется внутри эмулятора терминала в графической среде, появится диалоговое окно с запросом пароля для сети. При выполнении в текстовой консоли пароль может быть предоставлен вместе с другими аргументами:
+
+```console
+$ nmcli device wifi connect Hypnotoad password MyPassword
+```
+
+Если сеть Wi-Fi скрывает свое имя SSID, `nmcli` все еще может подключиться к ней с дополнительными `hidden` аргументами yes:
+
+```console
+$ nmcli device wifi connect Hypnotoad password MyPassword hidden yes
+```
+
+Если в системе более одного адаптера Wi-Fi, тот, который будет использоваться, может быть указан с `ifname`. Например, для подключения с помощью адаптера с именем `wlo1`:
+
+```console
+$ nmcli device wifi connect Hypnotoad password MyPassword ifname wlo1
+```
+
+После успешного подключения NetworkManager назовет его по соответствующему SSID (если это соединение Wi-Fi) и сохранит его для будущих подключений. Имена подключений и их UUID перечислены командой `nmcli connection show`:
+
+```console
+$ nmcli connection show
+NAME               UUID                                  TYPE      DEVICE
+Ethernet           53440255-567e-300d-9922-b28f0786f56e  ethernet  enp3s5
+tun0               cae685e1-b0c4-405a-8ece-6d424e1fb5f8  tun       tun0
+Hypnotoad          6fdec048-bcc5-490a-832b-da83d8cb7915  wifi      wlo1
+4G                 a2cf4460-0cb7-42e3-8df3-ccb927f2fd88  gsm       --
+```
+
+Отображается тип каждого подключения - это может быть `ethernet`, `wi-fi`, `tun`, `gsm`, `bridge` и т.д. - а также устройство, с которым они связаны. Для выполнения действий с определенным соединением необходимо указать его имя или UUID. Чтобы отключить соединение `Hypnotoad`, например:
+
+```console
+$ nmcli connection down Hypnotoad
+Connection 'Hypnotoad' successfully deactivated
+```
+
+Аналогичным образом, команду `nmcli connection up Hypnotoad` можно использовать для установки соединения, поскольку теперь оно сохраняется в NetworkManager. Имя интерфейса также можно использовать для повторного подключения, но в этом случае вместо него следует использовать объект устройства:
+
+```console
+$ nmcli device disconnect wlo2
+Device 'wlo1' successfully disconnected.
+```
+
+Имя интерфейса также можно использовать для восстановления соединения:
+
+```console
+$ nmcli device connect wlo2
+Device 'wlo1' successfully activated with '833692de-377e-4f91-a3dc-d9a2b1fcf6cb'.
+```
+
+Обратите внимание, что UUID соединения меняется каждый раз, когда соединение устанавливается, поэтому для согласованности предпочтительно использовать его имя. 
+
+Если беспроводной адаптер доступен, но не используется, его можно отключить для экономии энергии. На этот раз объектное *радио* нужно передать в `nmcli`:
+
+```console
+$ nmcli radio wifi off
+```
+
+Конечно, беспроводное устройство можно снова включить с помощью команды `nmcli radio wifi on`. После того, как соединения будут установлены, в будущем не потребуется никакого ручного взаимодействия, поскольку NetworkManager определяет доступные известные сети и автоматически подключается к ним. 
+
+При необходимости у NetworkManager есть плагины, которые могут расширять его функциональные возможности, например плагин для поддержки VPN-соединений.
+
+
+## systemd-networkd
+
+Системы, на которых работает systemd, могут дополнительно использовать свои встроенные демоны для управления сетевым подключением: `systemd-networkd` для управления сетевыми интерфейсами и `systemd-resolved` для управления локальным разрешением имен. Эти службы обратно совместимы с устаревшими методами конфигурации Linux, но, в частности, конфигурация сетевых интерфейсов имеет функции, которые стоит знать. 
+
+Файлы конфигурации, используемые systemd-networkd для настройки сетевых интерфейсов, можно найти в любом из следующих трех каталогов: 
+
+`/lib/systemd/network`  
+Системный сетевой каталог. 
+
+`/run/systemd/network`  
+Неустойчивый сетевой каталог времени выполнения. 
+
+`/etc/systemd/network`  
+Каталог локальной сети администрирования. 
+
+Файлы обрабатываются в лексикографическом порядке, поэтому рекомендуется начинать их имена с цифр, чтобы упорядочить их было проще для чтения и установки. 
+
+Файлы в `/etc` имеют наивысший приоритет, в то время как файлы в `/run` имеют приоритет над файлами с тем же именем в `/lib`. Это означает, что если файлы конфигурации в разных каталогах имеют одинаковое имя, то systemd-networkd проигнорирует файлы с меньшим приоритетом. Подобное разделение файлов - это способ изменить настройки интерфейса без изменения исходных файлов: модификации могут быть помещены в `/etc/systemd/network`, чтобы переопределить те, которые находятся в `/lib/systemd/network`. 
+
+Назначение каждого файла конфигурации зависит от его суффикса. Имена файлов, оканчивающиеся на `.netdev`, используются systemd-networkd для создания виртуальных сетевых устройств, таких как устройства *bridge* или *tun*. Файлы, оканчивающиеся на `.link`, устанавливают низкоуровневые конфигурации для соответствующего сетевого интерфейса. systemd-networkd автоматически обнаруживает и настраивает сетевые устройства по мере их появления, а также игнорирует устройства, уже настроенные другими способами, поэтому в большинстве ситуаций нет необходимости добавлять эти файлы. 
+
+Самый важный суффикс - `.network`. Файлы с этим суффиксом можно использовать для настройки сетевых адресов и маршрутов. Как и в случае с другими типами файлов конфигурации, имя файла определяет порядок, в котором файл будет обрабатываться. Сетевой интерфейс, на который ссылается файл конфигурации, определяется в разделе `[Match]` внутри файла. 
+
+Например, сетевой интерфейс `enp3s5` можно выбрать в файле `/etc/systemd/network/30-lan.network` с помощью записи `Name=enp3s5` в разделе `[Match]`:
+
+```console
+[Match]
+Name=enp3s5
+```
+
+Список имен, разделенных пробелами, также принимается для одновременного сопоставления многих сетевых интерфейсов с этим же файлом. Имена могут содержать глобусы в стиле оболочки, например `en*`. Другие записи предоставляют различные правила сопоставления, такие как выбор сетевого устройства по его MAC-адресу:
+
+```console
+[Match]
+MACAddress=00:16:3e:8d:2b:5b
+```
+
+Настройки устройства находятся в разделе файла `[Network]`. Для простой статической сетевой конфигурации требуются только записи `Address` и `Gateway`:
+
+```console
+[Match]
+MACAddress=00:16:3e:8d:2b:5b
+
+[Network]
+Address=192.168.0.100/24
+Gateway=192.168.0.1
+```
+
+Чтобы использовать протокол DHCP вместо статических IP-адресов, следует использовать запись `DHCP`:
+
+```console
+[Match]
+MACAddress=00:16:3e:8d:2b:5b
+
+[Network]
+DHCP=yes
+```
+
+Служба systemd-networkd попытается получить адреса IPv4 и IPv6 для сетевого интерфейса. Чтобы использовать только IPv4, следует использовать `DHCP=ipv4`. Точно так же `DHCP=ipv6` будет игнорировать настройки IPv4 и использовать только предоставленный IPv6-адрес. 
+
+Защищенные паролем беспроводные сети также можно настроить с помощью systemd-networkd, но сетевой адаптер должен быть уже аутентифицирован в сети, прежде чем systemd-networkd сможет его настроить. Аутентификация выполняется с помощью *WPA supplicant*, программы, предназначенной для настройки сетевых адаптеров для сетей, защищенных паролем. 
+
+Первый шаг - создать файл учетных данных с помощью команды `wpa_passphrase`:
+
+```console
+# wpa_passphrase MyWifi > /etc/wpa_supplicant/wpa_supplicant-wlo1.conf
+```
+
+Эта команда берет парольную фразу для беспроводной сети `MyWifi` из стандартного ввода и сохраняет ее хэш в `/etc/wpa_supplicant/wpa_supplicant-wlo1.conf`. Обратите внимание, что имя файла должно содержать соответствующее имя беспроводного интерфейса, следовательно, `wlo1` в имени файла.
+
+Диспетчер systemd считывает файлы парольной фразы WPA в `/etc/wpa_supplicant/` и создает соответствующую службу для запуска запрашивающего WPA и запуска интерфейса. В этом случае файл парольной фразы, созданный в примере, будет иметь соответствующий служебный модуль с именем `wpa_supplicant@wlo1.service`. Команда `systemctl start wpa_supplicant@wlo1.service` свяжет беспроводной адаптер с удаленной точкой доступа. Команда `systemctl enable wpa_supplicant@wlo1.service` делает ассоциацию автоматической во время загрузки. 
+
+Наконец, файл `.network`, соответствующий интерфейсу `wlo1`, должен присутствовать в `/etc/systemd/network/`, поскольку systemd-networkd будет использовать его для настройки интерфейса, как только запрашивающий WPA завершит связь с точкой доступа.
+
+
+## Упражнения для закрепления
+
+1. Что означает слово `Portal` в столбце `CONNECTIVITY` в выводе команды `nmcli general status`? 
+2. Как в консольном терминале обычный пользователь может использовать команду `nmcli` для подключения к беспроводной сети `MyWifi`, защищенной паролем `MyPassword`? 
+3. Какая команда может включить беспроводной адаптер, если он был ранее отключен операционной системой? 
+4. В какой каталог должны быть помещены пользовательские файлы конфигурации, когда systemd-networkd управляет сетевыми интерфейсами?
+
+
+## Упражнения на размышление
+
+1. Как пользователь может запустить команду `nmcli`, чтобы удалить неиспользуемое соединение с именем `Hotel Internet`? 
+2. NetworkManager периодически сканирует сети Wi-Fi, и команда `nmcli device wifi list` выводит список только точек доступа, найденных при последнем сканировании. Как следует использовать команду `nmcli`, чтобы попросить NetworkManager немедленно повторно просканировать все доступные точки доступа? 
+3. Какую запись имени следует использовать в разделе `[Match]` файла конфигурации systemd-networkd, чтобы соответствовать всем сетевым интерфейсам? 
+4. Как следует выполнить команду `wpa_passphrase`, чтобы использовать парольную фразу, заданную в качестве аргумента, а не из стандартного ввода?
+
+
+## Резюме
+
+В этом уроке рассматриваются общие инструменты, используемые в Linux для управления гетерогенными и динамическими сетевыми соединениями. Хотя большинство методов настройки не требуют вмешательства пользователя, иногда это необходимо, и такие инструменты, как *NetworkManager* и *systemd-networkd*, могут свести хлопоты к минимуму. В уроке рассматриваются следующие темы: 
+* Как NetworkManager и systemd-networkd интегрируются с системой. 
+* Как пользователь может взаимодействовать с NetworkManager и systemd-networkd. 
+* Базовая конфигурация интерфейса с помощью NetworkManager и systemd-networkd. 
+
+Рассматривались следующие концепции, команды и процедуры: 
+* Клиентские команды NetworkManager: `nmtui` и `nmcli`. 
+* Сканирование и подключение к беспроводным сетям с помощью соответствующих команд `nmcli`. 
+* Постоянные сетевые подключения Wi-Fi с использованием systemd-networkd.
+
+
+## Ответы на упражнения для закрепления
+
+1. Что означает слово `Portal` в столбце `CONNECTIVITY` в выводе команды `nmcli general status`? 
+2. Как в консольном терминале обычный пользователь может использовать команду `nmcli` для подключения к беспроводной сети `MyWifi`, защищенной паролем `MyPassword`? 
+3. Какая команда может включить беспроводной адаптер, если он был ранее отключен операционной системой? 
+4. В какой каталог должны быть помещены пользовательские файлы конфигурации, когда systemd-networkd управляет сетевыми интерфейсами?
+
+
+## Ответы на упражнения для размышления
+
+1. Как пользователь может запустить команду `nmcli`, чтобы удалить неиспользуемое соединение с именем `Hotel Internet`? 
+2. NetworkManager периодически сканирует сети Wi-Fi, и команда `nmcli device wifi list` выводит список только точек доступа, найденных при последнем сканировании. Как следует использовать команду `nmcli`, чтобы попросить NetworkManager немедленно повторно просканировать все доступные точки доступа? 
+3. Какую запись имени следует использовать в разделе `[Match]` файла конфигурации systemd-networkd, чтобы соответствовать всем сетевым интерфейсам? 
+4. Как следует выполнить команду `wpa_passphrase`, чтобы использовать парольную фразу, заданную в качестве аргумента, а не из стандартного ввода?
