Update 109.2 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.2 Persistent network configuration/109.2 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.2 Persistent network configuration/109.2 Lesson 2.md
@@ -1,4 +1,4 @@
-# 109.2 Урок 1
+# 109.2 Урок 2
 
 | **Сертификат:** | LPIC-1                                      |
 |:----------------|:--------------------------------------------|
@@ -19,15 +19,15 @@ Linux поддерживает практически все сетевые те
 
 В большинстве дистрибутивов Linux используется сервисный демон *NetworkManager* для настройки сетевых подключений системы и управления ими. Цель NetworkManager - сделать конфигурацию сети максимально простой и автоматической. Например, при использовании DHCP NetworkManager организует изменение маршрута, выборку IP-адреса и, при необходимости, обновления локального списка DNS-серверов. Когда доступны как проводное, так и беспроводное подключение, NetworkManager по умолчанию устанавливает приоритет проводного подключения. NetworkManager будет стараться поддерживать хотя бы одно соединение постоянно, когда это возможно.
 
->Запрос с использованием DHCP (*протокол динамической конфигурации хоста*) обычно отправляется через сетевой адаптер, как только устанавливается соединение с сетью. Затем активный в сети DHCP-сервер отвечает настройками (IP-адрес, сетевая маска, маршрут по умолчанию и т. Д.), Которые запрашивающая сторона должна использовать для связи по протоколу IP.
+>Запрос с использованием DHCP (*протокол динамической конфигурации хоста*) обычно отправляется через сетевой адаптер, как только устанавливается соединение с сетью. Затем активный в сети DHCP-сервер отвечает настройками (IP-адрес, сетевая маска, маршрут по умолчанию и т.д.), которые запрашивающая сторона должна использовать для связи по протоколу IP.
 
-По умолчанию демон NetworkManager управляет сетевыми интерфейсами, не упомянутыми в файле `/etc/network/interfaces`. Это сделано, чтобы не мешать другим методам конфигурации, которые также могут присутствовать, таким образом изменяя только автоматические интерфейсы. 
+По умолчанию демон NetworkManager управляет сетевыми интерфейсами, не упомянутыми в файле `/etc/network/interfaces`. Это сделано, чтобы не мешать другим методам конфигурации, которые также могут присутствовать, таким образом изменяя только не сконфигурированные интерфейсы. 
 
 Служба NetworkManager работает в фоновом режиме с привилегиями root и запускает необходимые действия, чтобы система оставалась в сети. Обычные пользователи могут создавать и изменять сетевые соединения с клиентскими приложениями, которые, хотя сами не имеют привилегий root, способны связываться с базовой службой для выполнения запрошенных действий. 
 
-Клиентские приложения для NetworkManager доступны как для командной строки, так и для графической среды. Для последнего клиентское приложение является аксессуаром среды рабочего стола (под такими именами, как *nm-tray*, *network-manager-gnome*, *nm-applet* или p*lasma-nm*) и обычно доступно через значок индикатора в углу. панели рабочего стола или из служебной программы настройки системы. 
+Клиентские приложения для NetworkManager доступны как для командной строки, так и для графического окружения. Для последнего клиентское приложение является аксессуаром среды рабочего стола (под такими именами, как *nm-tray*, *network-manager-gnome*, *nm-applet* или p*lasma-nm*) и обычно доступно через значок индикатора в углу. панели рабочего стола или из служебной программы настройки системы. 
 
-В командной строке NetworkManager предоставляет две клиентские программы: `nmcli` и `nmtui`. Обе программы имеют одинаковые базовые функции, но `nmtui` имеет интерфейс на основе curses, а `nmcli` - более полная команда, которую также можно использовать в сценариях. Команда `nmcli` разделяет все связанные с сетью свойства, контролируемые NetworkManager, на категории, называемые *объектами*: 
+В командной строке NetworkManager предоставляет две клиентские программы: `nmcli` и `nmtui`. Обе программы имеют одинаковые базовые функции, но `nmtui` имеет урезанный интерфейс , а `nmcli` - более полная команда, которую также можно использовать в скриптах. Команда `nmcli` разделяет все связанные с сетью свойства, контролируемые NetworkManager, на категории, называемые *объектами*: 
 
 `general`  
 Общий статус и операции NetworkManager. 
@@ -45,12 +45,12 @@ Linux поддерживает практически все сетевые те
 Устройства, управляемые NetworkManager.  
 
 `agent`  
-Секретный агент NetworkManager или агент polkit. 
+Секретный агент NetworkManager или polkit агент. 
 
 `monitor`  
-Отслеживайте изменения NetworkManager. 
+Отслеживает изменения NetworkManager. 
 
-Имя объекта - это главный аргумент команды `nmcli`. Например, чтобы показать общий статус подключения системы, в качестве аргумента должен быть указан объект general:
+Имя объекта - это главный аргумент команды `nmcli`. Например, чтобы показать общий статус подключения системы, в качестве аргумента должен быть указан объект `general`:
 
 ```console
 $ nmcli general
