Update 109.2 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.2 Persistent network configuration/109.2 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.2 Persistent network configuration/109.2 Lesson 2.md
@@ -251,15 +251,37 @@ DHCP=yes
 
 ## Ответы на упражнения для закрепления
 
-1. Что означает слово `Portal` в столбце `CONNECTIVITY` в выводе команды `nmcli general status`? 
-2. Как в консольном терминале обычный пользователь может использовать команду `nmcli` для подключения к беспроводной сети `MyWifi`, защищенной паролем `MyPassword`? 
-3. Какая команда может включить беспроводной адаптер, если он был ранее отключен операционной системой? 
-4. В какой каталог должны быть помещены пользовательские файлы конфигурации, когда systemd-networkd управляет сетевыми интерфейсами?
+**1. Что означает слово `Portal` в столбце `CONNECTIVITY` в выводе команды `nmcli general status`?**  
+Это означает, что для завершения процесса подключения требуются дополнительные шаги аутентификации (обычно через веб-браузер).
+
+
+**2. Как в консольном терминале обычный пользователь может использовать команду `nmcli` для подключения к беспроводной сети `MyWifi`, защищенной паролем `MyPassword`?**  
+В текстовом терминале команда будет
+```console
+$ nmcli device wifi connect MyWifi password MyPassword
+```
+
+**3. Какая команда может включить беспроводной адаптер, если он был ранее отключен операционной системой?**  
+```console
+$ nmcli radio wifi on
+```
+
+**4. В какой каталог должны быть помещены пользовательские файлы конфигурации, когда systemd-networkd управляет сетевыми интерфейсами?**  
+В каталоге локальной сети администрирования: `/etc/systemd/network`.
 
 
 ## Ответы на упражнения для размышления
 
-1. Как пользователь может запустить команду `nmcli`, чтобы удалить неиспользуемое соединение с именем `Hotel Internet`? 
-2. NetworkManager периодически сканирует сети Wi-Fi, и команда `nmcli device wifi list` выводит список только точек доступа, найденных при последнем сканировании. Как следует использовать команду `nmcli`, чтобы попросить NetworkManager немедленно повторно просканировать все доступные точки доступа? 
-3. Какую запись имени следует использовать в разделе `[Match]` файла конфигурации systemd-networkd, чтобы соответствовать всем сетевым интерфейсам? 
-4. Как следует выполнить команду `wpa_passphrase`, чтобы использовать парольную фразу, заданную в качестве аргумента, а не из стандартного ввода?
+**1. Как пользователь может запустить команду `nmcli`, чтобы удалить неиспользуемое соединение с именем `Hotel Internet`?**  
+```console
+$ nmcli connection delete "Hotel Internet"
+```
+
+**2. NetworkManager периодически сканирует сети Wi-Fi, и команда `nmcli device wifi list` выводит список только точек доступа, найденных при последнем сканировании. Как следует использовать команду `nmcli`, чтобы попросить NetworkManager немедленно повторно просканировать все доступные точки доступа?**  
+Пользователь root может запустить `nmcli device wifi rescan`, чтобы NetworkManager повторно сканировал доступные точки доступа.
+
+**3. Какую запись имени следует использовать в разделе `[Match]` файла конфигурации systemd-networkd, чтобы соответствовать всем сетевым интерфейсам?**  
+Запись `name=en*`, поскольку `en` является префиксом для интерфейсов Ethernet в Linux, а systemd-networkd принимает подобные оболочки glob.
+
+**4. Как следует выполнить команду `wpa_passphrase`, чтобы использовать парольную фразу, заданную в качестве аргумента, а не из стандартного ввода?**  
+Пароль должен быть указан сразу после SSID, как в `wpa_passphrase MyWifi MyPassword`.
