Update 109.3 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.3 Basic network troubleshooting/109.3 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.3 Basic network troubleshooting/109.3 Lesson 1.md
@@ -10,4 +10,289 @@
 
 ## Введение
 
-Linux обладает очень гибкими и мощными сетевыми возможностями. Фактически, операционные системы на базе Linux часто используются на обычных сетевых устройствах, включая дорогостоящее коммерческое оборудование. Сеть Linux сама по себе может быть сертификатом. Имея это в виду, в этом уроке будут рассмотрены только несколько основных инструментов настройки и устранения неполадок. Обязательно просмотрите уроки по интернет-протоколам и постоянной конфигурации сети перед этим уроком. В рамках этого урока мы рассмотрим инструменты для настройки и устранения неполадок сетей IPv4 и IPv6. Хотя это и не является официальной целью, анализаторы пакетов, такие как tcpdump, являются полезными инструментами для устранения неполадок. Анализаторы пакетов позволяют просматривать и записывать пакеты, входящие или исходящие из сетевого интерфейса. Такие инструменты, как шестнадцатеричные средства просмотра и анализаторы протоколов, могут использоваться для более подробного просмотра этих пакетов, чем обычно позволяет сниффер пакетов. Не помешало бы хотя бы знать о таких программах.
+Linux обладает очень гибкими и мощными сетевыми возможностями. Фактически, операционные системы на базе Linux часто используются на обычных сетевых устройствах, включая дорогостоящее коммерческое оборудование. Сеть Linux сама по себе может быть сертификатом. Имея это в виду, в этом уроке будут рассмотрены только несколько основных инструментов настройки и устранения неполадок. 
+
+Обязательно просмотрите уроки по интернет-протоколам и постоянной конфигурации сети перед этим уроком. В рамках этого урока мы рассмотрим инструменты для настройки и устранения неполадок сетей IPv4 и IPv6. 
+
+Хотя это и не является официальной целью, *анализаторы* пакетов, такие как `tcpdump`, являются полезными инструментами для устранения неполадок. Анализаторы пакетов позволяют просматривать и записывать пакеты, входящие или исходящие из сетевого интерфейса. Такие инструменты, как *шестнадцатеричные средства просмотра* и *анализаторы протоколов*, могут использоваться для более подробного просмотра этих пакетов, чем обычно позволяет сниффер пакетов. Не помешало бы хотя бы знать о таких программах.
+
+
+## О команде `ip`
+
+Команда `ip` - довольно недавняя утилита, используемая для просмотра и настройки практически всего, что касается сетевых конфигураций. В этом уроке рассматриваются некоторые из наиболее часто используемых подкоманд `ip`, но он почти не затрагивает то, что доступно. Умение читать документацию поможет вам работать с ней более эффективно. 
+
+Каждая подкоманда `ip` имеет свою собственную страницу руководства. В разделе `SEE ALSO` на странице `ip` man есть их список:
+
+```console
+$ man ip
+...
+SEE ALSO
+       ip-address(8), ip-addrlabel(8), ip-l2tp(8), ip-link(8), ip-maddress(8),
+       ip-monitor(8), ip-mroute(8), ip-neighbour(8), ip-netns(8), ip-
+       ntable(8), ip-route(8), ip-rule(8), ip-tcp_metrics(8), ip-token(8), ip-
+       tunnel(8), ip-xfrm(8)
+       IP Command reference ip-cref.ps
+...
+```
+
+Вместо того, чтобы смотреть на это каждый раз, когда вам понадобится справочная страница, просто добавьте - и имя подкоманды в `ip`, например `man ip-route`. 
+
+Еще один источник информации - это справочная функция. Чтобы просмотреть встроенную справку, добавьте `help` после подкоманды:
+
+```console
+$ ip address help
+Usage: ip address {add|change|replace} IFADDR dev IFNAME [ LIFETIME ]
+                                                      [ CONFFLAG-LIST ]
+       ip address del IFADDR dev IFNAME [mngtmpaddr]
+       ip address {save|flush} [ dev IFNAME ] [ scope SCOPE-ID ]
+                            [ to PREFIX ] [ FLAG-LIST ] [ label LABEL ] [up]
+       ip address [ show [ dev IFNAME ] [ scope SCOPE-ID ] [ master DEVICE ]
+                         [ type TYPE ] [ to PREFIX ] [ FLAG-LIST ]
+                         [ label LABEL ] [up] [ vrf NAME ] ]
+       ip address {showdump|restore}
+IFADDR := PREFIX | ADDR peer PREFIX
+...
+```
+
+## Сетевая маска и обзор маршрутизации
+
+IPv4 и IPv6 - это так называемые маршрутизируемые протоколы или протоколы маршрутизации. Это означает, что они разработаны таким образом, чтобы проектировщики сети могли управлять потоком трафика. Ethernet не является маршрутизируемым протоколом. Это означает, что если вы соедините несколько устройств вместе, используя только Ethernet, вы мало что сможете сделать для управления потоком сетевого трафика. Любые меры по контролю трафика в конечном итоге будут аналогичны текущим протоколам маршрутизации. 
+
+Маршрутизируемые протоколы позволяют разработчикам сетей сегментировать сети, чтобы снизить требования к обработке устройств связи, обеспечить избыточность и управлять трафиком. 
+
+Адреса IPv4 и IPv6 состоят из двух разделов. Первый набор битов составляет сетевой раздел, а второй набор - хост-часть. Количество битов, составляющих сетевую часть, определяется *сетевой маской* (также называемой *маской подсети*). Иногда ее также называют *длиной префикса*. Независимо от того, как он называется, это количество битов, которые машина обрабатывает как сетевую часть адреса. В IPv4 это иногда указывается в десятичном формате с разделительными точками. 
+
+Ниже приведен пример использования IPv4. Обратите внимание, как двоичные цифры сохраняют свои разрядные значения в октетах, даже когда они делятся на сетевую маску.
+
+```console
+192.168.130.5/20
+
+          192      168      130      5
+          11000000 10101000 10000010 00000101
+
+20 bits = 11111111 11111111 11110000 00000000
+
+Network = 192.168.128.0
+Host    = 2.5
+```
+
+Сетевая часть адреса используется машинами IPv4 или IPv6 для поиска интерфейса, на который должен быть отправлен пакет, в его таблице маршрутизации. Когда хост IPv4 или IPv6 с включенной маршрутизацией получает пакет, который не предназначен для самого хоста, он пытается сопоставить сетевую часть пункта назначения с сетью в таблице маршрутизации. Если соответствующая запись найдена, он отправляет пакет по назначению, указанному в таблице маршрутизации. Если записи не найдены и маршрут по умолчанию настроен, он отправляется по маршруту по умолчанию. Если запись не найдена и маршрут по умолчанию не настроен, пакет отбрасывается.
+
+
+## Настройка интерфейса
+
+Мы рассмотрим два инструмента, которые вы можете использовать для настройки сетевого интерфейса: `ifconfig` и `ip`. Программа `ifconfig`, хотя и широко используется, считается устаревшим инструментом и может быть недоступна в новых системах.
+
+>В новых дистрибутивах Linux установка пакета `net-tools` предоставит вам унаследованные сетевые команды.
+
+Перед настройкой интерфейса вы должны сначала узнать, какие интерфейсы доступны. Есть несколько способов сделать это. Один из способов - использовать параметр `-a` в `ifconfig`:
+
+```console
+$ ifconfig -a
+```
+
+Другой способ - с `ip`. Иногда вы увидите примеры с `ip addr`, `ip` a и некоторые с `ip-address`. Они синонимы. Официально подкоманда - `ip address`. Это означает, что если вы хотите просмотреть страницу руководства, вы должны использовать `man ip-address`, а не `man ip-addr`. 
+
+Подкоманда `link` для `ip` перечислит интерфейсные ссылки, доступные для настройки:
+
+```console
+$ ip link
+1: lo: <LOOPBACK,UP,LOWER_UP> mtu 65536 qdisc noqueue state UNKNOWN mode DEFAULT group default qlen 1000
+    link/loopback 00:00:00:00:00:00 brd 00:00:00:00:00:00
+2: enp0s3: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc pfifo_fast state UP mode DEFAULT group default qlen 1000
+    link/ether 08:00:27:54:18:57 brd ff:ff:ff:ff:ff:ff
+3: enp0s8: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc pfifo_fast state UP mode DEFAULT group default qlen 1000
+    link/ether 08:00:27:ab:11:3e brd ff:ff:ff:ff:ff:ff
+```
+
+Предполагая, что файловая система `sys` смонтирована, вы также можете перечислить содержимое `/sys/class/net`:
+
+```console
+$ ls /sys/class/net
+enp0s3  enp0s8  lo
+```
+
+Чтобы настроить интерфейс с помощью `ifconfig`, вы должны войти в систему как root или использовать такую утилиту, как `sudo`, для выполнения команды с привилегиями root. Следуйте примеру ниже:
+
+```console
+# ifconfig enp1s0 192.168.50.50/24
+```
+
+Версия `ifconfig` для Linux позволяет гибко указывать маску подсети:
+
+```console
+# ifconfig eth2 192.168.50.50 netmask 255.255.255.0
+# ifconfig eth2 192.168.50.50 netmask 0xffffff00
+# ifconfig enp0s8 add 2001:db8::10/64
+```
+
+Обратите внимание, как с IPv6 использовалось ключевое слово `add`. Если перед IPv6-адресом не указать `add`, вы получите сообщение об ошибке. 
+
+Следующая команда настраивает интерфейс с `ip`:
+
+```console
+# ip addr add 192.168.5.5/24 dev enp0s8
+# ip addr add 2001:db8::10/64 dev enp0s8
+```
+
+С `ip` одна и та же команда используется как для IPv4, так и для IPv6.
+
+
+## Настройка параметров низкого уровня
+
+Команда `ip link` используется для настройки низкоуровневого интерфейса или параметров протокола, таких как VLAN, ARP или MTU, или для отключения интерфейса. 
+
+Обычная задача для `ip link` - отключить или включить интерфейс. Это также можно сделать с помощью `ifconfig`:
+
+```console
+# ip link set dev enp0s8 down
+# ip link show dev enp0s8
+3: enp0s8: <BROADCAST,MULTICAST> mtu 1500 qdisc pfifo_fast state DOWN mode DEFAULT group default qlen 1000
+    link/ether 08:00:27:ab:11:3e brd ff:ff:ff:ff:ff:ff
+# ifconfig enp0s8 up
+# ip link show dev enp0s8
+3: enp0s8: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc pfifo_fast state UP mode DEFAULT group default qlen 1000
+    link/ether 08:00:27:ab:11:3e brd ff:ff:ff:ff:ff:ff
+```
+
+Иногда может потребоваться настроить MTU интерфейса. Как и в случае включения/отключения интерфейсов, это можно сделать с помощью `ifconfig` или `ip link`:
+
+```console
+# ip link set enp0s8 mtu 2000
+# ip link show dev enp0s3
+2: enp0s3: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 2000 qdisc pfifo_fast state UP mode DEFAULT group default qlen 1000
+    link/ether 08:00:27:54:53:59 brd ff:ff:ff:ff:ff:ff
+# ifconfig enp0s3 mtu 1500
+# ip link show dev enp0s3
+2: enp0s3: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc pfifo_fast state UP mode DEFAULT group default qlen 1000
+    link/ether 08:00:27:54:53:59 brd ff:ff:ff:ff:ff:ff
+```
+
+## Таблица маршрутизации
+
+Команды `route`, `netstat -r` и `ip route` можно использовать для просмотра таблицы маршрутизации. Если вы хотите изменить свои маршруты, вам нужно использовать `route` или `ip route`. Ниже приведены примеры просмотра таблицы маршрутизации:
+
+```console
+$ netstat -r
+Kernel IP routing table
+Destination     Gateway         Genmask         Flags   MSS Window  irtt Iface
+default         10.0.2.2        0.0.0.0         UG        0 0          0 enp0s3
+10.0.2.0        0.0.0.0         255.255.255.0   U         0 0          0 enp0s3
+192.168.150.0   0.0.0.0         255.255.255.0   U         0 0          0 enp0s8
+$ ip route
+default via 10.0.2.2 dev enp0s3 proto dhcp metric 100
+10.0.2.0/24 dev enp0s3 proto kernel scope link src 10.0.2.15 metric 100
+192.168.150.0/24 dev enp0s8 proto kernel scope link src 192.168.150.200
+$ route
+Kernel IP routing table
+Destination     Gateway         Genmask         Flags Metric Ref    Use Iface
+default         10.0.2.2        0.0.0.0         UG    100    0        0 enp0s3
+10.0.2.0        0.0.0.0         255.255.255.0   U     100    0        0 enp0s3
+192.168.150.0   0.0.0.0         255.255.255.0   U     0      0        0 enp0s8
+```
+
+Обратите внимание, что нет вывода относительно IPv6. Если вы хотите просмотреть свою таблицу маршрутизации для IPv6, вы должны использовать `route -6`, `netstat -6r` и `ip -6 route`.
+
+```console
+$ route -6
+Kernel IPv6 routing table
+Destination                    Next Hop                   Flag Met Ref Use If
+2001:db8::/64                  [::]                       U    256 0      0 enp0s8
+fe80::/64                      [::]                       U    100 0      0 enp0s3
+2002:a00::/24                  [::]                       !n   1024 0      0 lo
+[::]/0                         2001:db8::1                UG   1   0      0 enp0s8
+localhost/128                  [::]                       Un   0   2     84 lo
+2001:db8::10/128               [::]                       Un   0   1      0 lo
+fe80::a00:27ff:fe54:5359/128   [::]                       Un   0   1      0 lo
+ff00::/8                       [::]                       U    256 1      3 enp0s3
+ff00::/8                       [::]                       U    256 1      6 enp0s8
+```
+
+Пример `netstat -r6` был опущен, потому что его вывод идентичен `route -6`. Некоторые выходные данные приведенной выше команды `route` говорят сами за себя. Столбец `Flag` предоставляет некоторую информацию о маршруте. Флаг `U` указывает на то, что маршрут установлен. А `!` означает отклонить маршрут, т.е. маршрут с `!` не будет использоваться. Флаг `n` означает, что маршрут не был кэширован. Ядро поддерживает кэш маршрутов для более быстрого поиска отдельно от всех известных маршрутов. Флаг `G` указывает на шлюз. Столбцы `Metric` или `Met` не используются ядром. Это относится к административному расстоянию до цели. Это административное расстояние используется протоколами маршрутизации для определения динамических маршрутов. Столбец `Ref` - это счетчик ссылок или количество использований маршрута. Как и `Metric`, он не используется ядром Linux. В столбце «Использование» отображается количество поисков маршрута. 
+
+В выводе команды `netstat -r`, `MSS` указывает максимальный размер сегмента для TCP-соединений по этому маршруту. В столбце `Window` отображается размер окна TCP по умолчанию. `irtt` показывает время прохождения пакетов в оба конца по этому маршруту. 
+
+Вывод `ip route` и `ip -6 route` выглядит следующим образом: 
+
+1. Назначения. 
+2. Необязательный адрес, за которым следует интерфейс. 
+3. Протокол маршрутизации, используемый для добавления маршрута. 
+4. Размах маршрута. Если он не указано, это глобальная область действия или шлюз. 
+5. Метрика маршрута. Он используется протоколами динамической маршрутизации для определения стоимости маршрута. 
+Это не используется большинством систем. 
+6. Если это маршрут IPv6, предпочтение маршрута RFC4191. 
+
+Это должно прояснить несколько примеров:  
+Пример IPv4
+```console
+default via 10.0.2.2 dev enp0s3 proto dhcp metric 100
+```
+1. Пункт назначения - это маршрут по умолчанию. 
+2. Адрес шлюза `10.0.2.2` доступен через интерфейс `enp0s3`. 
+3. Он был добавлен в таблицу маршрутизации DHCP. 
+4. Область видимости не указана, поэтому она глобальная. 
+5. Маршрут имеет стоимость `100`. 
+6. Нет предпочтения маршрута IPv6. 
+
+Пример IPv6
+```console
+fc0::/64 dev enp0s8 proto kernel metric 256 pref medium
+```
+1. Место назначения - `fc0::/64`. 
+2. Это доступно через интерфейс `enp0s8`. 
+3. Он был добавлен ядром автоматически. 
+4. Область видимости не указана, поэтому она глобальная. 
+5. Маршрут имеет стоимость `256`. 
+6. Он имеет предпочтение IPv6 как `medium`.
+
+## Управление маршрутами
+
+Маршрутами можно управлять с помощью `route` или `ip-route `. Ниже приведен пример добавления и удаления маршрута с помощью команды `route`. Для `route` вы должны использовать параметр `-6` для IPv6:
+
+```console
+# ping6 -c 2 2001:db8:1::20
+connect: Network is unreachable
+# route -6 add 2001:db8:1::/64 gw 2001:db8::3
+# ping6 -c 2 2001:db8:1::20
+PING 2001:db8:1::20(2001:db8:1::20) 56 data bytes
+64 bytes from 2001:db8:1::20: icmp_seq=1 ttl=64 time=0.451 ms
+64 bytes from 2001:db8:1::20: icmp_seq=2 ttl=64 time=0.438 ms
+# route -6 del 2001:db8:1::/64 gw 2001:db8::3
+# ping6 -c 2 2001:db8:1::20
+connect: Network is unreachable
+```
+
+Ниже приведен тот же пример с использованием команды `ip route`:
+
+```console
+# ping6 -c 2 2001:db8:1:20
+connect: Network is unreachable
+# ip route add 2001:db8:1::/64 via 2001:db8::3
+# ping6 -c 2 2001:db8:1:20
+PING 2001:db8:1::20(2001:db8:1::20) 56 data bytes
+64 bytes from 2001:db8:1::20: icmp_seq=2 ttl=64 time=0.529 ms
+64 bytes from 2001:db8:1::20: icmp_seq=2 ttl=64 time=0.438 ms
+# ip route del 2001:db8:1::/64 via 2001:db8::3
+# ping6 -c 2 2001:db8:1::20
+connect: Network is unreachable
+```
+
+## Упражнения для закрепления
+
+
+
+## Упражнения на размышление
+
+
+
+
+## Резюме
+
+
+
+## Ответы на упражнения для закрепления
+
+
+
+
+## Ответы на упражнения для размышления
